Update hero banner taglines and content

--- a/product-details.html
+++ b/product-details.html
@@ -268,15 +268,7 @@
                             <div class="header-left-wrapper">
                                 <div class="header-logo">
                                     <a href="index.html">
-                                        <!-- <img src="assets/img/logo-white.svg" alt="Kars-html" -->
-                                        <h2 style="font-size: 23px; margin: 0px; text-align: right; color: #fff; font-weight: 700; line-height: 1.2;">
-                                            Malhotra Engineering <br />
-                                            <span style="
-                            color: #e32801;
-                            font-size: 35px;
-                            line-height: 10px;
-                          ">work</span>
-                                        </h2>
+                                        <img src="assets/images/motojet-LOGO.png" alt="malhotra" />
                                     </a>
                                 </div>
                             </div>
@@ -419,7 +411,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="footer-column footer-col-brand">
                             <div class="footer-brand">
-                                <h3 class="footer-title">Malhotra Engineering</h3>
+                               <img src="assets/images/motojet-LOGO.png" alt="malhotra" />
                                 <div class="brand-accent"></div>
                             </div>
                             <p class="footer-desc">
